<resources>
    <string name="app_name">Bhaktapur</string>
    <string name="exp_nyatapola">Nyatapola Temple is a 5-Roof. Meaning is Five Storeys Roofed Temple. Pagoda Style temple located in Bhaktapur, Nepal.</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="banner_text">Bhaktapur welcomes you all</string>
    <string name="history">History</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dattatraya">Dattatreya, Dattā or Dattaguru or Duttatreya, is a God and paradigmatic Sannyasi (monk) and one of the lords of Yoga in Hinduism. In many regions of India and Nepal, he is considered a deity.</string>
    <string name="pottery">Hidden down shop-lined alleyways leading south from the curving road to Taumadhi Tole, Potters’ Sq is exactly what you would expect – a public square full of potter\'s wheels and rows of clay pots drying in the sun.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_findus">Map</string>
    <string name="blood_and_humiliation">Blood and Humiliation</string>
    <string name="blockade">Blockade</string>
    <string name="brotherhood">Brotherhood</string>
    <string name="_3_kings">3 Kings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="dattatraya_title">Dattatraya</string>
    <string name="nyatapola_title">Nyatapola</string>
    <string name="pottery_title">Pottery Square</string>
    <string name="durbar_title">Durbar Square</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="appname">Khwopa Assist</string>
    <string name="title_activity_guides">GuidesActivity</string>
    <string name="title_activity_detail_guide">DetailGuideActivity</string>
    <string name="nyatapola_location_details1">You should be able to see the sky-high rooftop of the Nyatapola Temple long before you reach Taumadhi Tole. With five storeys towering 30m above the square, this is the tallest temple in all of Nepal and one of the tallest buildings in the Kathmandu Valley. This perfectly proportioned temple was built in 1702 during the reign of King Bhupatindra Malla, and the construction was so sturdy that the 1934 and 2015 earthquakes caused only minor damage.The temple is reached by a stairway flanked by stone figures of the temple guardians. At the bottom are the legendary Rajput wrestlers Jayamel and Phattu, depicted kneeling with hefty maces. Subsequent levels are guarded by elephants with floral saddles, lions adorned with bells, beaked griffons with rams’ horns and finally two goddesses – Baghini and Singhini. Each figure is said to be 10 times as strong as the figure on the level below.
    </string>
    <string name="nyatapola_details2">
            The temple is dedicated to Siddhi Lakshmi, a bloodthirsty incarnation of the goddess Durga (Parvati). The idol of the goddess is so fearsome that only the temple’s priests are allowed to enter the inner sanctum, but less brutal incarnations of the goddess appear on the torana above the door, beneath a canopy of braided snakes, and also on the temple’s 180 carved roof struts. In a classic piece of religious crossover, the Buddhist eight lucky signs are carved beside the temple doorways.
            Look for the chariot runners piled up on the north side of the temple.
    </string>
    <string name="wiki_link">See more.</string>
    <string name="nagarkot_detail1">Nagarkot has a reputation as the top spot for enjoying Himalayan views from the comfort of your hotel balcony. Just 32km from Kathmandu, the village is packed with hotels lining a ridge, affording one of the broadest possible views of the Himalaya, with eight ranges visible (Annapurna, Manaslu, Ganesh Himal, Langtang, Jugal, Rolwaling, Everest and Numbur). However, timing is everything, as the mountains are notorious for disappearing behind cloudy skies. The best viewing seasons are October to December and March to April, when clear skies are likely.</string>
    <string name="nagarkot_detail2">Nagarkot view tower is one of the most popular tourist destinations in Nagarkot. It is situated around 2100 metres above sea level and can be hiked by physically fit hikers in about one hour. You will have a 360 view of the himalayas one of the broadest views of himalayas along with kathmandu valley, lush greenery of national parks, rolling hills,etc. Lots of people they wake up early and do sunrise hiking to Witness the magnificent sunrise along with the grandeur and magnificence of the himalayas. What makes the sunrise hiking very special is with morning sunrise changing colours of the snow capes himalayas. It’s like fire on ice. Still it is a very scenic walk to the view tower during daytime with the stunning views of the unobstructed landscapes, rolling hills, thick pine forests and charming villages.</string>
    <string name="nagarkot_detail3">Nagarkot Panoramic Hiking Trail is a very refreshing walk with stunning views of the majestic Himalayas. This panoramic Hiking Trail is perfect enough for good 3 to 3.5 hours ideal for everyone from young travellers to family with children as it is pretty easy hike. This hike includes Nagarkot Nature Trail + Tamang Village Walk (starting from kartike village) + Panoramic Hiking Trail with 180 degree views of the stunning landscapes with lush greenery. You will enjoy the time in nature and burn some good calories in this trek. Perfect to enjoy the stunning mountain views in quiet and with fresh mountain air.</string>
</resources>