<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:foregroundGravity="center_horizontal"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPage"
                    android:layout_width="match_parent"
                    android:layout_height="224dp" >
                </androidx.viewpager.widget.ViewPager>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Popular Squares"
                    android:textSize="24px"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="20dp">

                    <androidx.cardview.widget.CardView
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="3dp"
                        app:cardCornerRadius="10dp"
                        android:id="@+id/nyatapola"
                        tools:ignore="MissingConstraints">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >
                            <com.joooonho.SelectableRoundedImageView
                                android:layout_width="match_parent"
                                android:layout_height="200dp"
                                android:src="@drawable/nyatapola"
                                android:scaleType="centerCrop"
                                app:sriv_left_top_corner_radius="10dp"
                                app:sriv_right_top_corner_radius="10dp"
                                />
                            <TextView
                                android:layout_margin="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textAlignment="center"
                                android:text="Nyatapola"
                                android:textStyle="bold"
                                />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_margin="10dp"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:text="@string/exp_nyatapola"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="3dp"
                        app:cardCornerRadius="10dp"
                        android:id="@+id/dattatrya"
                        tools:ignore="MissingConstraints">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >
                            <com.joooonho.SelectableRoundedImageView
                                android:layout_width="match_parent"
                                android:layout_height="200dp"
                                android:src="@drawable/dattatraya"
                                android:scaleType="centerCrop"
                                app:sriv_left_top_corner_radius="10dp"
                                app:sriv_right_top_corner_radius="10dp"
                                />
                            <TextView
                                android:layout_margin="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textAlignment="center"
                                android:text="Dattatraya"
                                android:textStyle="bold"
                                />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_margin="10dp"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:text="@string/dattatraya"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="3dp"
                        app:cardCornerRadius="10dp"
                        android:id="@+id/potterysquare"
                        tools:ignore="MissingConstraints">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >
                            <com.joooonho.SelectableRoundedImageView
                                android:layout_width="match_parent"
                                android:layout_height="200dp"
                                android:src="@drawable/potterysquare"
                                android:scaleType="centerCrop"
                                app:sriv_left_top_corner_radius="10dp"
                                app:sriv_right_top_corner_radius="10dp"
                                />
                            <TextView
                                android:layout_margin="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textAlignment="center"
                                android:text="Pottery Square"
                                android:textStyle="bold"
                                />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_margin="10dp"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:text="@string/pottery"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:id="@+id/historyshort"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:background="@drawable/street"
                                android:orientation="vertical"
                                >
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/history"
                                    android:textSize="72sp"
                                    android:textStyle="bold"
                                    android:textColor="@color/cardview_light_background"
                                    />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                >
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:orientation="vertical">
                                    <Button
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="3 Kings"
                                        android:textSize="18sp"
                                        android:background="@color/cardview_dark_background"
                                        android:textColor="@color/cardview_light_background"
                                        />
                                    <Button
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="Brotherhood"
                                        android:textSize="18sp"
                                        android:background="@color/cardview_dark_background"
                                        android:textColor="@color/cardview_light_background"
                                        />
                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:orientation="vertical">
                                    <Button
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="Blood "
                                        android:textSize="18sp"
                                        android:background="@color/cardview_dark_background"
                                        android:textColor="@color/cardview_light_background"
                                        />
                                    <Button
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="Blockade"
                                        android:textSize="18sp"
                                        android:background="@color/cardview_dark_background"
                                        android:textColor="@color/cardview_light_background"
                                        />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/footer"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:background="@color/colorPrimary"
                    >

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight ="3"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:id="@+id/find_us"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Find Us" />

                        <TextView
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="something" />

                        <TextView
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="something" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight ="3">

                        <TextView
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="something" />

                        <TextView
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="something" />

                        <TextView
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="something" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight ="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="something" />

                        <TextView
                            android:layout_width="match_parent"
                            android:textAlignment="center"
                            android:layout_height="wrap_content"
                            android:text="something" />

                        <TextView
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="something" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
</LinearLayout>